@@ -20,6 +20,7 @@ Stephan Diehl - stephan.diehl@gmx.net
 John Lehman - j1o1h1n@gmail.com
 Jürgen Kartnaller - <kartnaller@lovelysystems.com>
 G Clinch
+Kees Boss
 
 Erik gets a special mention for the contribution of the "Showcase".
 
@@ -30,6 +31,8 @@ eventually.
 Bernd's work on the core python compiler has been absolutely invaluable.
 
 G Clinch ported the DisclosurePanel from GWT
+
+Kees Boss added multiple inheritance support
 
 James - thank you for kick-starting this project.
 
